--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 Changelog
 =========
 
-0.3 (2011-xx-yy) [tkimnguyen] unreleased
+0.4 (2011-xx-yy) [tkimnguyen] unreleased
 -----------------------------
 
 - TODO: autocomplete for adding attendees
@@ -16,6 +16,21 @@ Changelog
   adding Meeting objects in Events folder (probably easier)
 
 - TODO: enable next/previous navigation?
+
+- TODO: implement one-time email notification as an action
+
+
+0.3 (2011-09-12) [tkimnguyen]
+-----------------------------
+
+- add Action Items and Next Meeting Date Time attributes
+
+- prevent unicode errors on sending email notification
+
+- email notification message includes text/plain version of rich text
+  field values
+
+- fixed incorrect default skin choice on install
 
 
 0.2.2 (2011-08-29) [tkimnguyen]
