--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,12 @@ Changelog
 - TODO: implement one-time email notification as an action
 
 
+0.3.1 (2011-09-13) [tkimnguyen]
+-------------------------------
+
+- version bump
+
+
 0.3 (2011-09-12) [tkimnguyen]
 -----------------------------
 
